--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta name="google-site-verification" content="l7zb2RChZ2vXarQWe5a4XHNLTN28TaoaNeSRB30WcsM" />
   </head>
   <body>
     <div class="wrapper">
